# udoo-key-rs

./: .gitignore  README.md  REFERENCE.md
esp32/: Cargo.toml  README.md
esp32/.cargo/: config.toml
esp32/src/: chip8_tx.py  command.py  rom_server.py  rx.py
rp2040/: Cargo.toml  README.md
